--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,8 @@
 ---
 layout: default
 ---
+
 <div class="page">
-
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-  </header>
-
-  <article class="post-content">
-    {{ content }}
-  </article>
-
+  <h1 class="page-title">{{ page.title }}</h1>
+  {{ content }}
 </div>
